// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core: Color BackgroundColors renders 1`] = `
<section>
  <h2
    id="background-colors"
  >
    Background colors
  </h2>
  <p>
    To maintain an open and welcoming experience we mostly use no background color, that is white. Our background colors have a functional role and are used to organize, structure or highlight a section. Apricot is our primary background color, gray and light turquoise are complementary. 
  </p>
  <div
    className="color-group"
  >
    <ColorDisplay
      border="has-border"
      contrastBlackApproved={true}
      hex="#FFFFFF"
      key="0"
      noWhiteExample={true}
      subTitle="bg-white"
      title="White"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#FBF2EA"
      key="1"
      subTitle="bg-primary"
      title="Apricot"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#EBF8F2"
      key="2"
      subTitle="bg-secondary"
      title="Turquoise lighter"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#EBE7E2"
      key="3"
      subTitle="bg-tertiary"
      title="Gray"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#F9F8F6"
      key="4"
      subTitle="bg-quaternary"
      title="Gray light"
    />
  </div>
</section>
`;

exports[`Core: Color BrownScaleColors renders 1`] = `
<section>
  <h2
    id="brown-scale-colors"
  >
    Brown scale colors
  </h2>
  <p>
    Brown scale colors are used for both typography, borders and interface details to maintain a warm and welcoming expression.
  </p>
  <div
    className="color-group"
  >
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#2F2424"
      key="0"
      subTitle="brown-solid"
      title="Brown solid"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#493C3B"
      key="1"
      subTitle="brown-dark"
      title="Brown dark"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#72605E"
      key="2"
      subTitle="brown-medium"
      title="Brown medium"
    />
    <ColorDisplay
      contrastBlackAlert={true}
      contrastWhiteAlert={true}
      hex="#A38B80"
      key="3"
      subTitle="brown-soft"
      title="Brown soft"
    />
    <ColorDisplay
      contrastBlackAlert={true}
      hex="#D4C4BC"
      key="4"
      subTitle="brown-light"
      title="Brown light"
    />
  </div>
</section>
`;

exports[`Core: Color CommunicationColors renders 1`] = `
<section>
  <p>
    It is important to maintain sufficient color contrast in our products to meet accessability requirements. For normal text content this means a 4.5:1 ratio against background and for graphics and large text (18 px, or bold 14 px) a 3:1 ratio against background. To help you to make informed color decisions, we showcase the contrast ratio of each color to our default text (brown) and background (white) color here. 
  </p>
  <div
    className="d-flex flex-row justify-content-around color-contrast-section"
  >
    <span
      className="d-flex"
    >
      <i
        aria-hidden="true"
        className="material-icons check mr-1"
      >
        check_circle
      </i>
      <b>
        Pass (≥ 4.5:1)
      </b>
    </span>
    <span
      className="d-flex"
    >
      <i
        aria-hidden="true"
        className="material-icons warning mr-1"
      >
        warning
      </i>
      <b>
        OK for graphics or large text (≥ 3:1)
      </b>
    </span>
    <span
      className="d-flex"
    >
      <i
        aria-hidden="true"
        className="material-icons cancel mr-1"
      >
        error
      </i>
      <b>
        Fail
      </b>
    </span>
  </div>
</section>
`;

exports[`Core: Color Lead renders 1`] = `
<section>
  <p
    className="lead"
  >
    The primary color of Swedbank Pay is yellow, it is used to give a unified appearance and create visual recognition. Yellow is an energetic and vibrant color that matches the brand of Swedbank Pay. In complement to this, Swedbank Pay uses a selection of colors from Swedbank´s color palette.
  </p>
  <div
    className="d-flex flex-column align-items-center mt-5"
  >
    <img
      alt="The Swedbank Pay color palette"
      className="w-100"
      src="/TEST/img/documentation/colors/color-palette.png"
    />
    <span
      className="caption-text"
    >
      <span
        className="font-weight-bold"
      >
        Figure 1.
      </span>
       The Swedbank Pay color palette
    </span>
  </div>
</section>
`;

exports[`Core: Color MainColors renders 1`] = `
<section>
  <h2
    id="main-colors"
  >
    Primary and secondary colors
  </h2>
  <p>
    The primary color in our palette is green. The green color is a strong carrier of identity and a means of creating immediate recognition.
  </p>
  <div
    className="color-group flex-wrap"
  >
    <ColorDisplay
      hex="#2A9D3F"
      key="0"
      name="Primary"
      rgb="45, 169, 68"
    />
    <ColorDisplay
      fontColor="font-white"
      hex="#3C3C3C"
      key="1"
      name="Secondary Dark"
      rgb="60, 60, 60"
    />
    <ColorDisplay
      hex="#C8C8C8"
      key="2"
      name="Light Grey"
      rgb="200, 200, 200"
    />
    <ColorDisplay
      fontColor="font-white"
      hex="#000000"
      key="3"
      name="Black"
      rgb="0, 0, 0"
    />
    <ColorDisplay
      border="has-border"
      hex="#FFFFFF"
      key="4"
      name="White"
      rgb="255, 255, 255"
    />
  </div>
</section>
`;

exports[`Core: Color SystemColors renders 1`] = `
<section>
  <h2
    id="system-colors"
  >
    System colors
  </h2>
  <p>
    We have four primary system colors (red, blue, green, and yellow) which all have a lighter complementary version as well. 
  </p>
  <div
    className="color-group"
  >
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#8c0d14"
      key="0"
      subTitle="system-error-dark"
      title="Error dark"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#B5111A"
      key="1"
      subTitle="system-error"
      title="Error"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#FCEEE9"
      key="2"
      subTitle="system-error-light"
      title="Error light"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#C15715"
      key="3"
      subTitle="system-warning"
      title="Warning"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#FEF2E2"
      key="4"
      subTitle="system-warning-light"
      title="Warning light"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#3C7213"
      key="5"
      subTitle="system-success"
      title="Success"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#F2F7EB"
      key="6"
      subTitle="system-success-light"
      title="Success light"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#3961A7"
      key="7"
      subTitle="system-info"
      title="Info"
    />
    <ColorDisplay
      contrastBlackApproved={true}
      hex="#EBF1FA"
      key="8"
      subTitle="system-info-light"
      title="Info light"
    />
  </div>
</section>
`;

exports[`Core: Color TextColors renders 1`] = `
<section>
  <h2
    id="text-colors"
  >
    Text colors
  </h2>
  <p>
    Brown is our default text color that should be used for all normal text besides links and text on dark backgrounds or images. For links, use turquoise and for text on dark backgrounds or images use white. A lighter brown is used as a muted text color for smaller or less important text that shouldn’t be the primary focus.
  </p>
  <div
    className="color-group"
  >
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#512B2B"
      key="0"
      noBlackExample={true}
      subTitle="text-default"
      title="Brown"
    />
    <ColorDisplay
      contrastBlackAlert={true}
      contrastWhiteApproved={true}
      hex="#72605E"
      key="1"
      subTitle="text-muted"
      title="Brown medium"
    />
    <ColorDisplay
      contrastWhiteApproved={true}
      hex="#257886"
      key="2"
      subTitle="text-link"
      title="Turquoise dark"
    />
    <ColorDisplay
      border="has-border"
      contrastBlackApproved={true}
      hex="#FFFFFF"
      key="3"
      noWhiteExample={true}
      subTitle="text-white"
      title="White"
    />
  </div>
</section>
`;

exports[`Core: Color renders 1`] = `<Fragment />`;
